# capsule

./: .dockerignore  .gitignore  .test.env  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test-suite.yml
src/capsule/: __init__.py  __main__.py  logging.py  settings.py  types.py  utils.py
src/capsule/activitypub/: exceptions.py  models.py  pod.py  routes.py  service.py
src/capsule/activitypub/models/: __init__.py  actor.py  follow.py  inbox.py
src/capsule/activitypub/repositories/: __init__.py  actor.py  follow.py  inbox.py
src/capsule/activitypub/templates/: host-meta.xml
src/capsule/api/: models.py  pod.py  routes.py  service.py  utils.py
src/capsule/api/repositories/: __init__.py
src/capsule/database/: pod.py  repository.py  service.py  utils.py
src/capsule/security/: cli.py  exception.py  forms.py  models.py  pod.py  routes.py  service.py  utils.py
src/capsule/security/repositories/: __init__.py  app.py  authorization.py  token.py
src/capsule/security/services/: __init__.py  auth.py  signature.py
src/capsule/security/templates/: authorize.html  oauth_authorize.html  oauth_code.html
tests/: conftest.py  test_activitypub.py  test_cli.py  test_outbox.py  test_serverinfo.py  test_system.py  utils.py
tests/activitypub/: test_actor.py  test_ap_api.py  test_ap_well_known_api.py  test_delete.py  test_follow.py  test_inbox.py  test_outbox.py  test_serverinfo.py  test_system.py  test_webfinger.py
tests/api/: test_apps.py
tests/inbox/: test_delete.py  test_follow.py  test_inbox.py
tests/security/: test_cli.py  test_oauth.py
