[project]
name = "capsule"
version = "0.0.1"
description = "Single user dev focused ActivityPub server"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [
  { name = "Humberto Rocha", email = "humrochagf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
]
dependencies = [
  "bcrypt",
  "cryptography",
  "httpx",
  "jinja2",
  "loguru",
  "python-multipart",
  "uvicorn[standard]",
  "wheke",
  "wheke-ladybug",
  "wheke-sqlmodel",
]

[project.scripts]
capsule = "capsule.__main__:cli"

[project.urls]
Documentation = "https://github.com/humrochagf/capsule#readme"
Issues = "https://github.com/humrochagf/capsule/issues"
Source = "https://github.com/humrochagf/capsule"

[dependency-groups]
dev = [
  "coolname",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
  "respx",
  "ruff",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.coverage.run]
source_pkgs = ["capsule", "tests"]
branch = false
parallel = true
concurrency = ["greenlet", "thread"]
omit = [
  "src/capsule/__about__.py",
]

[tool.coverage.paths]
capsule = ["src/capsule", "*/capsule/src/capsule"]
tests = ["tests", "*/capsule/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = """
  .env
  | .hatch
  | .mypy_cache
  | .venv
  | __pycache__
  | env
  | venv
"""

[[tool.mypy.overrides]]
module = [
  "coolname",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip = [
  ".env",
  ".hatch",
  ".mypy_cache",
  ".venv",
  "__pycache__",
  "env",
  "venv",
]

[tool.ruff]
exclude = [
  ".env",
  ".hatch",
  ".mypy_cache",
  ".venv",
  "__pycache__",
  "env",
  "venv",
]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Stdlib module name collision
  "A005",
  # Same line string implicit string concatenation
  "ISC001",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore public binding
  "S104",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Relative imports
  "TID252",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["capsule"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
